--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <div id="nameheader">Brendan Cody-Kenny</div>
       <div id="maincontent">
         <h3>Research</h3>
-        I am a Researcher in the <a href="http://ncra.ucd.ie/">NCRA</a> (Natural Computing Research and Applications) Group in University College Dublin (since June 2016).
+        June 2016 </br>
+        I am a Researcher in the <a href="http://ncra.ucd.ie/">NCRA</a> (Natural Computing Research and Applications) Group in University College Dublin.
         <br><br>
         Ph.D. Graduand as of October 2015.
         <br><br>
