Cleaned up the page

--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
       <div id="nameheader">Brendan Cody-Kenny</div>
       <div id="maincontent">
         <h3>Research</h3>
-        June 2016 </br>
-        I am a Researcher in the <a href="http://ncra.ucd.ie/">NCRA</a> (Natural Computing Research and Applications) Group in University College Dublin.
+        I am a Researcher in the <a href="http://ncra.ucd.ie/">NCRA</a> (Natural Computing Research and Applications) Group in University College Dublin. (since June 2016)
         <br><br>
-        Ph.D. Graduand as of October 2015.
+        Working on Search-Based Software Engineering
+        <br>
+        
+        <br>
+      </div>
+
+      <div id="maincontent">
+        <h3>PhD</h3>
+              Ph.D. Graduand as of October 2015 in Trinity College Dublin. 
         <br><br>
         My interests include the application of Evolutionary Computation to Software Engineering.
         <br>
       </div>
+      
       <div id="leftnav">
         <table>
+          <tr><td>[</td><td><a href=""></a></td><td>]</td></tr>
+          <!--
           <tr><td>[</td><td><a href="index.php">Currently</a></td><td>]</td></tr>
           <tr><td>[</td><td><a href="index.php?p=publications">Publications</a> </td><td>]</td></tr>
           <tr><td>[</td><td><a href="index.php?p=Projects">Projects</a> </td><td>]</td></tr>
@@ -27,14 +37,13 @@
           <tr><td>[</td><td><a href="https://securetransferaudit.com/">file transfers</a> </td><td>]</td></tr>
           <tr><td>[</td><td><a href="index.php?p=teaching">Teaching</a> </td><td>]</td></tr>
           <tr><td>[</td><td><a href="index.php?p=calendar">Calendar</a> </td><td>]</td></tr>
+          -->
         </table>
 
       </div>
 
       <div id="endsig">
-        codykenb (at) tcd (dot) ie
-        <br>
-        <a href="bck-gpg.asc">PGP Key</a>
+        codykenny (at) gmail (dot) com
         <br>
         <a href="http://ie.linkedin.com/in/brendancodykenny" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;">LinkedIn</span></a>
       </div>
