Cleaned up the page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       
       <div id="leftnav">
         <table>
-          <tr><td>[</td><td><a href=""></a></td><td>]</td></tr>
           <!--
           <tr><td>[</td><td><a href="index.php">Currently</a></td><td>]</td></tr>
           <tr><td>[</td><td><a href="index.php?p=publications">Publications</a> </td><td>]</td></tr>
@@ -38,6 +37,8 @@
           <tr><td>[</td><td><a href="index.php?p=teaching">Teaching</a> </td><td>]</td></tr>
           <tr><td>[</td><td><a href="index.php?p=calendar">Calendar</a> </td><td>]</td></tr>
           -->
+          <tr><td>[</td><td><a href="http://ie.linkedin.com/in/brendancodykenny" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;">LinkedIn</span></a></td><td>]</td></tr>
+          <tr><td>[</td><td>codykenny@gmail.com</td><td>]</td></tr>
         </table>
 
       </div>
@@ -45,7 +46,7 @@
       <div id="endsig">
         codykenny (at) gmail (dot) com
         <br>
-        <a href="http://ie.linkedin.com/in/brendancodykenny" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;">LinkedIn</span></a>
+
       </div>
     </div>
   </body>
