Cleaned up the page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <br><br>
         My interests include the application of Evolutionary Computation to Software Engineering.
         <br>
+        Old homepage <a href="https://www.scss.tcd.ie/~codykenb/">here</a>.
       </div>
       
       <div id="leftnav">
