Cleaned up the page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3>Research</h3>
         I am a Researcher in the <a href="http://ncra.ucd.ie/">NCRA</a> (Natural Computing Research and Applications) Group in University College Dublin. (since June 2016)
         <br><br>
-        Working on Search-Based Software Engineering
+        Working on Search-Based Software Engineering.
         <br>
         
         <br>
@@ -19,16 +19,6 @@
 
       <div id="leftnav">
         <table>
-          <!--
-          <tr><td>[</td><td><a href="index.php">Currently</a></td><td>]</td></tr>
-          <tr><td>[</td><td><a href="index.php?p=publications">Publications</a> </td><td>]</td></tr>
-          <tr><td>[</td><td><a href="index.php?p=Projects">Projects</a> </td><td>]</td></tr>
-          <tr><td>[</td><td><a href="index.php?p=locoGPlanding">locoGP</a> </td><td>]</td></tr>
-          <tr><td>[</td><td><a href="index.php?p=othercerts">X.509 other certs</a> </td><td>]</td></tr>
-          <tr><td>[</td><td><a href="https://securetransferaudit.com/">file transfers</a> </td><td>]</td></tr>
-          <tr><td>[</td><td><a href="index.php?p=teaching">Teaching</a> </td><td>]</td></tr>
-          <tr><td>[</td><td><a href="index.php?p=calendar">Calendar</a> </td><td>]</td></tr>
-          -->
           <tr><td>[</td><td><a href="http://ie.linkedin.com/in/brendancodykenny" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;">LinkedIn</span></a></td><td>]</td></tr>
           <tr><td>[</td><td>codykenny@gmail.com</td><td>]</td></tr>
         </table>
@@ -36,9 +26,9 @@
       
       <div id="maincontent">
         <h3>PhD</h3>
-              Ph.D. Graduand as of October 2015 in Trinity College Dublin. 
+        Ph.D. Graduand as of October 2015 in Trinity College Dublin. 
         <br><br>
-        My interests include the application of Evolutionary Computation to Software Engineering.
+        Interests include the application of Evolutionary Computation to Software Engineering.
         <br>
         Old homepage <a href="https://www.scss.tcd.ie/~codykenb/">here</a>.
       </div>
