--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <style>body{font-family:verdana,arial,'sans serif'}table{margin-left:auto;margin-right:auto}#entirepage{width:600px;margin-left:auto;margin-right:auto;margin-top:15px}#nameheader{float:top;width:600px;font-size:100%;border:1px solid #ddd;padding:15px 15px 15px 15px;margin:15px 0px 15px 0px;text-align:center}.maincontent{float:left;margin:15px 0 15px 0;padding:15px 15px 15px 15px;border:1px solid #ddd;width:600px;font-size:80%}#endsig{margin:0 15px 15px 15px;float:right;text-align:center;font-size:80%}</style>
+    <style>body{background-color:rgba(0,0,0,.01);font-family:verdana,arial,'sans serif'}table{margin-left:auto;margin-right:auto}#entirepage{width:600px;margin-left:auto;margin-right:auto;margin-top:15px}#nameheader{float:top;width:600px;font-size:100%;border:1px solid #ccc;padding:15px 15px 15px 15px;margin:15px 0px 15px 0px;text-align:center}.maincontent{float:left;margin:15px 0 15px 0;padding:15px 15px 15px 15px;border:1px solid #ccc;width:600px;font-size:80%}#endsig{margin:0 15px 15px 15px;float:right;text-align:center;font-size:80%}div{background-color:#FFFFFF;}</style>
   </head>
+  
   <body>
     <div id="entirepage">
       <div id="nameheader">Brendan Cody-Kenny</div>
@@ -13,8 +14,7 @@
         <h3>Tesing</h3><p>
         Interesteing stuff</p>
       </div> -->
-
-      
+     
       <div class="maincontent">
         <h3>Research</h3>
         I am a Researcher in the <a href="http://ncra.ucd.ie/">NCRA</a> (Natural Computing Research and Applications) Group in University College Dublin. (since June 2016)
