--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a:active  {
         <p>Ph.D. Graduand as of October 2015 in Trinity College Dublin. Graduated June 2016.</p>
         <p>Thesis Title: Genetic Programming Bias with Software Performance Analysis</p>
         Interests include the application of Evolutionary Computation to Software Engineering.
-        <p>More info on Trinity's Access to Research Archive: <br><a href="http://www.tara.tcd.ie/handle/2262/76251">http://www.tara.tcd.ie/handle/2262/76251</a></p>
+        <p>Thesis: <br><a href="http://www.tara.tcd.ie/handle/2262/76251">http://www.tara.tcd.ie/handle/2262/76251</a></p>
         <p>Source available:<br><a href="https://github.com/codykenb/locoGP">https://github.com/codykenb/locoGP</a></p>
         
       </div>
