--- a/index.html
+++ b/index.html
@@ -45,8 +45,31 @@ a:active  {
         Interests include the application of Evolutionary Computation to Software Engineering.
         <p>Thesis: <br><a href="http://www.tara.tcd.ie/handle/2262/76251">http://www.tara.tcd.ie/handle/2262/76251</a></p>
         <p>Source available:<br><a href="https://github.com/codykenb/locoGP">https://github.com/codykenb/locoGP</a></p>
+        </div>
+
+
+        <div class="maincontent">
+<a href="https://github.com/codykenb/locoGP"><img style="float: right; top: 0; right: 0; border: 0; margin: -15px ;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+
+<h3>locoGP</h3>
+
+
+locoGP is a Genetic Programming system which modifies, compiles and executes Java source code with a focus on improving the performance of programs as measured in bytecodes executed.
+</br></br>
+Problem & improvement code listings: <a href="locoGP/locoGP-ImprovementsFound.html">html</a></br>
+Paper: <a href="locoGP/locoGP.html">html</a>  <a href="locoGP/GECCO-2015-GIWS-locoGP-BCK-EG-SB.preprint.pdf">pdf</a> 
+      </br>
+      </br> 
+Source: <a href="https://github.com/codykenb/locoGP">github</a></br>
+Source Dependency: <a href="locoGP/bycounter-r26653.jar">bycounter.jar</a> (~12MB)
+
+</br>
+</br>
+July 2015
+
+        </div>
+
         
-      </div>
 
       <div id="endsig">
         [ <a href="http://ie.linkedin.com/in/brendancodykenny">LinkedIn</a> ]
