--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@ a:active  {
 
 locoGP is a Genetic Programming system which modifies, compiles and executes Java source code with a focus on improving the performance of programs as measured in bytecodes executed.
 </br></br>
-Problem & improvement code listings: <a href="locoGP/locoGP-ImprovementsFound.html">html</a></br>
-Paper: <a href="locoGP/locoGP.html">html</a>  <a href="locoGP/GECCO-2015-GIWS-locoGP-BCK-EG-SB.preprint.pdf">pdf</a> 
-      </br>
-      </br> 
-Source: <a href="https://github.com/codykenb/locoGP">github</a></br>
-Source Dependency: <a href="locoGP/bycounter-r26653.jar">bycounter.jar</a> (~12MB)
+        Paper: <a href="locoGP/locoGP.html">html</a>  <a href="locoGP/GECCO-2015-GIWS-locoGP-BCK-EG-SB.preprint.pdf">pdf</a> </br>
+        
+        Java problems and improvement listings: <a href="locoGP/locoGP-ImprovementsFound.html">html</a></br>
 
-</br>
+
+Source: <a href="https://github.com/codykenb/locoGP">github</a></br>
+
 </br>
 July 2015
 
